# ezcli

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yaml  example1.py  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  ruff.toml  run.py  setup.cfg  simpletest.py  tasks.py  tasks_lint.py  temp.py  testing.py
docs/: 1-overview.md  advanced_config.md  cheatsheet.md  customization.md  dev.md  examples.md  introduction.md  settings.md  todo.md  troubleshooting.md  usagepatterns.md  usecases.md
docsgenerator/: generator.py  tasks.py
examples/: README.md  basic.py  basic_customize_settings.py  basic_using_arguments.py  common.py  customize_parser.py  debugging.py  defaulttask.py  dynamic_task_creation.py  example1.py  example1_test.py  example1b.py  example2.py  example2_test.py  extra_arguments.py  simple.py
ezcli/: __init__.py
test/: test_core.py  test_usage.py
tests/: README.md  arg_test.py  basic_test.py  conftest.py  custom_parser_test.py  envvars_test.py  group_test.py  init_test.py  maintask_test.py  parameter_test.py  runcommand_test.py  task_test.py  taskcli2_test.py  taskcli_basic_test.py  taskcli_misc_test.py  taskcli_misuse_test.py  taskcli_params_test.py  taskcli_test.py  taskcliconfig_test.py  taskfiledev_test.py  tasktools_test.py  test_argument_types.py  test_cli_arguments.py  test_custom_parser.py  test_examples.py  test_examples2.py  test_include_edge_cases.py  test_includes_and_aliases.py  test_includetests_structure2.py  test_includetests_structure3.py  test_including.py  test_init.py  test_listing.py  test_listing_format.py  test_other.py  (+10 more)
(+81 files in other folders)
