
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version="0.0.5"
name="taskcli"

[project.scripts]
taskcli = "taskcli.main:main_internal"
t = "taskcli.main:main_internal"
tt = "taskcli.main:main_internal"

[project.optional-dependencies]
dev = [
    "ruff",
    "nox",
    "isort",
    "mypy==1.8.0",
    "pytest",
    "pytest-clarity",  # better pytest output
    "pytest-randomly", # randomize test order
    "pytest-cov",      # coverage
]

# For screenshots and terminal recording
docs = [
    "ansitoimg",
    "termtosvg",
]


[tool.pytest.ini_options]
markers = [
    "include: test combining tasks across many tasks.py files",
]