
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version="0.0.5"
name="taskcli"

[project.scripts]
taskcli = "taskcli.main:main_internal"
t = "taskcli.main:main_internal"
tt = "taskcli.main:main_internal"

[project.optional-dependencies]
dev = [
    "ruff==0.1.9",
    "nox==2023.4.22",
    "isort==5.13.2",
    "mypy==1.8.0",
    "pytest==7.4.3",
    "pytest-clarity",  # better pytest output
    "pytest-randomly", # randomize test order
    "pytest-cov",      # coverage
    "pytest-xdist",    # run in parallel
]

# For screenshots and terminal recording
docs = [
    "ansitoimg",
    "termtosvg",
]


[tool.pytest.ini_options]
markers = [
    "include: test combining tasks across many tasks.py files",
]